--- a/style.css
+++ b/style.css
@@ -1,44 +1,47 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
 }
 
-body{
-    font-family: 'poppins' , sans-serif;
+body {
+    font-family: 'poppins', sans-serif;
 }
-h1{
+
+h1 {
     font-size: 2.5rem;
     font-size: 700;
 }
 
 
-h2{
+h2 {
     font-size: 1.8rem;
     font-size: 600;
 }
 
-h3{
+h3 {
     font-size: 1.4rem;
     font-size: 800;
 }
-h4{
+
+h4 {
     font-size: 1.1rem;
     font-size: 600;
 }
 
 
-h5{
+h5 {
     font-size: 1rem;
     font-size: 400;
     color: #1d1d1d;
 }
-h6{
-     color: #d8d8d8;
+
+h6 {
+    color: #d8d8d8;
 }
 
-button{
+button {
     font-size: 0.8rem;
     font-weight: 700;
     outline: none;
@@ -51,69 +54,105 @@ button{
     transition: 0.3s ease;
 }
 
-button:hover{
+button:hover {
     /* background-color: #3a3833; */
     background-color: rgb(153, 52, 69);
 }
 
+/* mobile nav */
 
-.logo{
-    height: 10vh;
-    width: 7%;
-    margin-left: 50px;
-    /* margin-top: -5px;
-    border: 3px solid red;
-    border-radius: 5vh; */
-    border-radius: 5vh;
+/* .navbar-light .navbar-toggler{
+       
+} */
+
+@media only screen and (max-width:991px) {
+    #navbarSupportedContent>ul>li {
+        margin: 1rem;
+        /* justify-content: center; */
+        margin-left: 20vh;
+        font-size: 3vh;
+    }
+
+    #navbarSupportedContent>ul>li>i {
+        color: rgb(250, 50, 15);
+
+        font-size: 3vh;
+    }
+
+    #navbarSupportedContent>ul>li:hover {
+        color: red;
+    }
+
+    .logo {
+        height: 10vh !important;
+        width: 27% !important;
+      
+    }
+
+    #home{
+        margin-top: 20vh !important;
+    }
+
+    
+    .dev {
+       margin-left: -41px !important;
+          height: 51vh !important;
+        width: 178% !important;
+        background-size: cover;
+    }
 }
 
+    .logo {
+        height: 10vh;
+        width: 7%;
+        margin-left: 50px;
+        border-radius: 5vh;
+    }
 
-.navbar{
-    font-size: 16px;
- }
 
- .navbar-light  .navbar-nav .nav-link{
-     padding: 0 25px;
-      color: black;
-   transition: .1s ease;
+    .navbar {
+        font-size: 16px;
+    }
+
+    .navbar-light .navbar-nav .nav-link {
+        padding: 0 25px;
+        color: black;
+        transition: .1s ease;
 
     }
 
 
-    .navbar-light  .navbar-nav .nav-link:hover, 
-    .navbar-light  .navbar-nav .nav-link
-    {
+    .navbar-light .navbar-nav .nav-link:hover,
+    .navbar-light .navbar-nav .nav-link {
         color: coral;
-      
-   
-       }
 
-.navbar i{
-    font-size: 1.5rem;
-    padding: 0 20px;
-    cursor: pointer;
-    font-weight: 500;
-    transition: 0.3s ease;
-}
 
-.navbar i:hover{
-    color: cornflowerblue;
-}
+    }
 
-#home span{
-    color: coral;
-}
-#home{
-    height: 100vh;
-}
+    .navbar i {
+        font-size: 1.5rem;
+        padding: 0 20px;
+        cursor: pointer;
+        font-weight: 500;
+        transition: 0.3s ease;
+    }
 
-.dev{
-    /* background-image: url("./img/device.jpg");
-    height: 70vh;
-    width:  100%;
-    background-size: cover; */
-    /* position: top 60px center; */
-    height: 70vh;
-    width:  100%;
-    background-size: cover;
-}
+    .navbar i:hover {
+        color: cornflowerblue;
+    }
+
+    #home span {
+        color: coral;
+    }
+
+    #home {
+        height: 100vh;
+        margin-top: 10vh;
+    }
+
+    .dev {
+ 
+        height: 70vh;
+        width: 100%;
+        background-size: cover;
+    }
