--- a/style.css
+++ b/style.css
@@ -216,12 +216,12 @@ button:hover {
         .product .buy-btn{
             background-color: #fb774b;
             /* transform: translatey(20px); */
-            opacity: 0;
+/*             opacity: 0; */
             transition: 0.3s all;
         }
         .product:hover .buy-btn{
              /* transform: translatey(20px); */
-            opacity: 1;
+/*             opacity: 1; */
          }
 
          #banner{
